--- a/java-tomcat-sample-docker/Dockerfile
+++ b/java-tomcat-sample-docker/Dockerfile
@@ -1,4 +1,7 @@
 FROM tomcat:8.0
-RUN cp -a **/*.war /usr/local/tomcat/webapps/
-EXPOSE 8080
+ 
+ADD **/*.war /usr/local/tomcat/webapps
+ 
+EXPOSE 8000
+ 
 CMD ["catalina.sh", "run"]
