--- a/java-tomcat-sample-docker/Jenkinsfile
+++ b/java-tomcat-sample-docker/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Build Application') {
             steps {
-                sh 'mvn -f pom.xml clean package'
+                sh 'mvn -f java-tomcat-sample-docker/pom.xml clean package'
             }
             post {
                 success {
@@ -17,7 +17,7 @@ pipeline {
             steps {
                 sh "pwd"
                 sh "ls -a"
-                sh "docker build . -t tomcatsamplewebapp:${env.BUILD_ID}" // for every container, there is a build id
+                sh "docker build ./java-tomcat-sample-docker -t tomcatsamplewebapp:${env.BUILD_ID}" // for every container, there is a build id
             }
         }
 
